# rust-playground

./: .gitignore  Makefile
boards/feather_m0/: .gdb_history  Cargo.toml  board.mk
boards/feather_m0/.cargo/: config
boards/feather_m0/examples/: blink_simple.rs  blinky_basic.rs  rtfm.rs  rtfm_blink.rs  serial.rs  usb_serial.rs
boards/feather_m0/src/: lib.rs
boards/fk_core/: Cargo.toml  board.mk
boards/fk_core/examples/: blink_simple.rs  debug_serial.rs
boards/fk_core/src/: lib.rs
hal/: Cargo.toml
