[package]
name = "fk_core"
version = "0.1.0"
authors = []
description = ""
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = ""
repository = ""
readme = "README.md"
documentation = ""

[dependencies]
bare-metal = { version = "0.2.4", features = ["const-fn"] }
cortex-m = "0.5.8"
cortex-m-rtfm = "0.3.4"
atsamd21g18a = "0.3.1"
nb = "0.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.cortex-m-rt]
version = "0.6.5"
optional = true

[dependencies.atsamd21-hal]
path = "../../hal"
version = "~0.2"
default-features = false

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "~0.5"
panic_rtt = "~0.1"
cortex-m-semihosting = "~0.3"
cortex-m-rtfm = "0.3.4"

[features]
default = ["rt", "atsamd21-hal/samd21g18a", "usb"]
rt = ["cortex-m-rt", "atsamd21-hal/samd21g18a-rt"]
unproven = ["atsamd21-hal/unproven"]
use_rtt = ["atsamd21-hal/use_rtt"]
usb = ["atsamd21-hal/usb"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
